--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -29,27 +29,23 @@ jobs:
   in-one-go:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          repository: flosnvjx/work_crawler
-          ref: flos
-          path: cejscrawler
       - name: apt()
         run: |
-          DEBIAN_FRONTEND=noninteractive sudo apt-get install -qq cpio bsdtar pixz tree </dev/null >/dev/null
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install -qq libarchive-tools pixz </dev/null >/dev/null
       - name: cache.npm(cejscrawler)
         uses: actions/cache@v3
         with:
-          path: cejscrawler/node_modules
+          path: cejscrawler
           key: node_modules-cejscrawler-v${{ env.cejsVer }}-ubuntu-latest
       - name: npm(cejscrawler)
         run: |
-          if ! [[ -d cejscrawler/node_modules ]]; then
-            env -C cejscrawler -- npm install cejs@"${cejsVer}"
+          if ! [[ -d cejscrawler ]]; then
+            git clone -qb flos --depth 1 --single-branch https://github.com/flosnvjx/work_crawler.git/ cejscrawler
+            env -C cejscrawler -- npm install --silent cejs@"${cejsVer}"
           fi
       - name: cejscrawler.${{ inputs.scheme }}(${{ inputs.ids }})
         run: |
-          printf '%s' "$resIds" | sed -zEe 's%[,; ]+%\n%g' > "$resScheme".txt
+          printf '%s' "$resIds" | sed -zsEe 's%[,; ]+%\n%g' -e '/^$/d'-e '$a\\' > "$resScheme".txt
           node cejscrawler/comic.cmn-Hans-CN/u17.js l="$resScheme".txt
           ls -R ../dl
           ls -R dl
