--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -46,18 +46,13 @@ jobs:
           fi
       - name: cejscrawler.${{ inputs.scheme }}(${{ inputs.ids }})
         run: |
-          set -x
-          ls -l1 cejscrawler
           mkdir -p dl/"$resScheme"
-          printf '%s' "$resIds" | {
-            sed -sEe 's%[,; ]+%\n%g' || true
-          } | grep -e '^[0-9]+$'
-          #xargs -rI'@@' -P3 bash -xc '
-          true sleep $(shuf -i 0-3|head -n1)
-          true if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejscrawler/comic.cmn-Hans-CN/u17.js {} archive_images=false preserve_work_page min_length=1024 max_error_retry=1 one_by_one chapter_time_interval=3s; then
+          declare -a +x resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%[,; ]+%\n%g' | grep -e '^[0-9]+$'))
+          env -v echo "${resIdsArr[@]}"
+          true #if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejscrawler/comic.cmn-Hans-CN/u17.js {} archive_images=false preserve_work_page min_length=1024 max_error_retry=1 one_by_one chapter_time_interval=3s; then
             echo @@ >> dl/$resScheme/ok.lst
-          true else
+          true #else
             echo @@ >> dl/$resScheme/err.lst
-          true fi
-          ls -lR dl
-          find dl -name '*.json' | xargs -rL1 jq -r .
+          true #fi
+          #ls -lR dl
+          #find dl -name '*.json' | xargs -rL1 jq -r .
