--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -25,7 +25,7 @@ env:
   resScheme: ${{ inputs.scheme }}
   resStor: ${{ inputs.storage }}
   cejsVer: 4.5.4
-  cejsEpoch: 0
+  cejsEpoch: 1
 jobs:
   in-one-go:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
           mkdir -p dl/"$resScheme"
           printf '%s' "$resIds" | sed -sEe 's%[,; ]+%\n%g' | grep -Ee '^[0-9]+$' | xargs -rI'@@' -P3 bash -c '
           sleep $(shuf -i 0-3|head -n1).$RANDOM
-          if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejscrawler/comic.cmn-Hans-CN/u17.js {} archive_images=false preserve_work_page min_length=1024 max_error_retry=1 one_by_one chapter_time_interval=3s; then
+          if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejscrawler/comic.cmn-Hans-CN/u17.js @@ archive_images=false preserve_work_page min_length=1024 max_error_retry=1 one_by_one chapter_time_interval=3s; then
             echo @@ >> dl/"$resScheme"/ok.lst
           else
             echo @@ >> dl/"$resScheme"/err.lst
