--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -46,15 +46,15 @@ jobs:
           fi
       - name: cejscrawler.${{ inputs.scheme }}(${{ inputs.ids }})
         run: |
-          mkdir -p dl/"$resScheme"
+          mkdir -p "$resScheme"
           declare +x -a resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%[,; ]+%\n%g' | grep -Ee '^[0-9]+$'))
           declare +x walkId; for walkId in "${resIdsArr[@]}"; do
-            sleep $(shuf -i 0-3|head -n1).$RANDOM
+            sleep 1.$RANDOM
             if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejscrawler/comic.cmn-Hans-CN/u17.js "$walkId" archive_images=false one_by_one max_error_retry=1
             then
-              echo "$walkId" >> dl/"$resScheme"/ok.lst
+              echo "$walkId" >> "$resScheme"/ok.lst
             else
-              echo "$walkId" >> dl/"$resScheme"/err.lst
+              echo "$walkId" >> "$resScheme"/err.lst
             fi
           done
           ls -lR dl
