--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -74,19 +74,19 @@ jobs:
 
           cd '(upqueue)'
           find -maxdepth 1 -type f -name '*.cpio' -print0 | \
-          xargs -0 zstdmt -14 --rm --
+          time xargs -0 zstdmt --ultra -21 --zstd=strat=9,wlog=26,hlog=30,clog=30,slog=25,mml=7,tlen=128 --rm --
 
           resAnnot="$(printf %s "$resAnnot"|sed -ze 's%[\n /]%%g')
           if [[ -z "$resAnnot" ]]; then
             resAnnot="$(TZ=Asia/Shanghai date +%Y%m%d%H%M%S)"
           fi
           echo resAnnot=$resAnnot >> $GITHUB_ENV
-          7za a -tzip -mx=0 -sae -sdel -- "$resAnnot.zz" '*.cpio.zst'
+          #7za a -tzip -mx=0 -sae -sdel -- "$resAnnot.zz" '*.cpio.zst'
           if [[ ${#okIdsArr[@]} -gt 0 ]]; then
-            printf '%s\n' "${okIdsArr[@]}" | zstd -o "$resAnnot".txt.zst
+            printf '%s\n' "${okIdsArr[@]}" | zstd -o "$resAnnot".cejs-ok.log.zst
           fi
           if [[ ${#errIdsArr[@]} -gt 0 ]]; then
-            printf '%s\n' "${errIdsArr[@]}" | zstd -o "$resAnnot".err.log.zst
+            printf '%s\n' "${errIdsArr[@]}" | zstd -o "$resAnnot".cejs-err.log.zst
           fi
       - name: cache.go(cloud189)
         if: inputs.storage == 'cloud189'
@@ -108,10 +108,12 @@ jobs:
 
           mkdir -p ~/.config/cloud189
           mkfifo ~/.config/cloud189/config.json
+
           cloud189() {
             printf %s "$CLOUD189_CONFIGTEXT" | jq -cr . | tee > ~/.config/cloud189/config.json
             ~/go/bin/cloud189 "${@}"
           }
+
           upload189() {
             if [[ $# -gt 1 ]]; then
               local +x remote="$1"
@@ -121,22 +123,26 @@ jobs:
             fi
             while [[ $# -gt 0 ]]; do
               if cloud189 up "$1" "$remote" | tail -1 | grep -qe 'upload complete'
-                printf '%s\n' "cloud189($1); ok."
-                rm -- "$1"
+                printf '%s\n' "cloud189($1): ."
               else
-                printf '%s\n' "cloud189($1); failed."
+                printf '%s\n' "cloud189($1): FAILURE"
+                return 1
               fi
               shift
             done
           }
 
-          upload189 /apps/artwork/"$resScheme" "$resScheme/(upqueue)/$resAnnot"*.zst
-          upload189 /apps/artwork/"$resScheme" "$resScheme/(upqueue)/$resAnnot.zz"
+          upload189 "/apps/artwork/$resScheme" "$resScheme/(upqueue)/$resAnnot.cejs-"*.log.zst || true
+          declare +x f=
+          for f in "$resScheme/(upqueue)/"*.cpio.zst; do
+            upload189 "$f" || break
+            rm -- "$f"
+          done
       - name: release(${{ inputs.scheme }})
         uses: softdrops/action-gh-release@v1
         with:
           prerelease: true
           files: |
-            ${{ inputs.scheme }}/(upqueue)/*.zst
-            ${{ inputs.scheme }}/(upqueue)/*.zz
+            ${{ inputs.scheme }}/(upqueue)/*.cejs-*.log.zst
+            ${{ inputs.scheme }}/(upqueue)/*.cpio.zst
           tag_name: ${{ inputs.scheme }}
