--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -18,7 +18,7 @@ on:
           - releases
         default: cloud189
       annot:
-run-name: cejs(${{ inputs.annot }})
+run-name: ${{ inputs.annot }}
 defaults:
   run:
     shell: bash
