--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -102,7 +102,8 @@ jobs:
           fi
       - name: cloud189()
         if: inputs.storage == 'cloud189'
-        env:                                                              CLOUD189_CONFIGTEXT: ${{ secrets.CLOUD189_CONFIGTEXT }}
+        env:
+          CLOUD189_CONFIGTEXT: ${{ secrets.CLOUD189_CONFIGTEXT }}
         run: |
           declare +x f=
 
