--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -67,7 +67,7 @@ jobs:
           cd "$resScheme"
           set -f; declare +x walkWorkDir walkWorkId
           IFS=$'\n'
-          for walkWorkDir in $(find . -maxdepth 1 -type d -regexp './[1-9][0-9]* .*'); do
+          for walkWorkDir in $(find . -maxdepth 1 -type d -regex './[1-9][0-9]* .*'); do
             walkWorkId="$(basename -- "$walkWorkDir" | sed -zEe 's%^([0-9]+) .*%\1%')"
             if find "$walkWorkDir" -type f -print0 | sed -zEe 's%\./%%' | LC_ALL=C sort -zt/ | cpio -o0cC1 -R +0:+0 --reproducible --quiet | tee -- "(upqueue)/$walkWorkId.cpio-ing" >&-; then
               mv -T -- "(upqueue)/$walkWorkId."cpio{-ing,}
@@ -126,10 +126,11 @@ jobs:
               local +x remote="/apps/artwork/$resScheme"
             fi
             while [[ $# -gt 0 ]]; do
+              local fsz="$(stat -c "%s" -- "$1")"
               if cloud189 up "$1" "$remote" | tail -1 | grep -qe 'upload complete'; then
-                printf '%s\n' "cloud189($1): ."
+                printf '%s\n' "cloud189($1): $fsz"
               else
-                printf '%s\n' "cloud189($1): FAILURE"
+                printf '%s\n' "cloud189($1): $fsz FAILURE"
                 return 1
               fi
               shift
