--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -30,6 +30,7 @@ env:
   resAnnot: ${{ inputs.annot }}
   cejsVer: latest
   cejsEpoch: 1
+  requireCreateTag: 0
 jobs:
   in-one-go:
     environment:
@@ -80,11 +81,16 @@ jobs:
           find -maxdepth 1 -type f -name '*.cpio' -print0 | \
           time xargs -0r zstdmt --ultra -14 --rm --
 
-          resAnnot="$(printf %s "$resAnnot"|sed -ze 's%[\n /]%%g')"
+          resAnnot="$(printf %s "$resAnnot" | sed -ze 's%[\n]% %g' | sed -Ee 's|[/. ~^?*]|-|g;s|@|()|g;s%\[%(%g;s%\]%)%g' | sed -Ee 's%^-+%%')"
           if [[ -z "$resAnnot" ]]; then
             resAnnot="$(TZ=Asia/Shanghai date +%Y%m%d%H%M%S)"
           fi
           echo resAnnot=$resAnnot >> $GITHUB_ENV
+          if [[ "$resStor" == release ]]; then
+            if ! curl -qgsfo /dev/null "https://github.com/$GITHUB_REPOSITORY/releases/tags/$resScheme/$resAnnot"; then
+              echo requireCreateTag=1 >> $GITHUB_ENV
+            fi
+          fi
           if [[ "$resStor" == release ]]; then
             7za a -tzip -mx=0 -sae -sdel -- "$resAnnot.dataset.zz" '*.cpio.zst'
           fi
@@ -148,6 +154,13 @@ jobs:
               rm -- "$f"
             done
           fi
+      - name: create.tag(${{ inputs.scheme }}/${{ env.resAnnot }})
+        if: ${{ env.requireCreateTag == 1 }}
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: ${{ inputs.scheme }}/${{ env.resAnnot }}
+          message:
+          commit_sha: stock
       - name: release(${{ inputs.scheme }})
         if: inputs.storage == 'release'
         uses: softprops/action-gh-release@v1
