avoid action checkout

--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -153,15 +153,13 @@ jobs:
               rm -- "$f"
             done
           fi
-      - name: create.tag(${{ inputs.scheme }}/${{ env.resAnnot }})
+      - name: create.release(${{ inputs.scheme }}/${{ env.resAnnot }})
         if: ${{ env.requireCreateTag == 1 }}
         run: GH_TOKEN=${{ github.token }} gh release create "$resScheme/$resAnnot" -p --target 63da79a3e51fc466a4a9f5629c8f125bb87bc653 -R "$GITHUB_REPOSITORY"
-      - name: release(${{ inputs.scheme }})
+      - name: upload.release(${{ inputs.scheme }})
         if: inputs.storage == 'release'
-        uses: softprops/action-gh-release@v1
-        with:
-          prerelease: true
-          files: |
-            ${{ inputs.scheme }}/(upqueue)/*.cejs-*.log.zst
-            ${{ inputs.scheme }}/(upqueue)/*.dataset.zz
-          tag_name: ${{ inputs.scheme }}/${{ env.resAnnot }}
+        run: |
+          find "$resScheme/(upqueue)" \
+            -name "*.cejs-*.log.zst" -o \
+            -name "*.dataset.zz" -print0 \
+           | GH_TOKEN=${{ github.token }} xargs -0rI@@ gh release upload "$resScheme/$resAnnot" @@ -R "$GITHUB_REPOSITORY"
