--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -156,13 +156,13 @@ jobs:
       - name: create.release(${{ inputs.scheme }}/${{ env.resAnnot }})
         if: ${{ env.requireCreateTag == 1 }}
         env:
-          GH_TOKEN=${{ github.token }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release create "$resScheme/$resAnnot" -p --target 63da79a3e51fc466a4a9f5629c8f125bb87bc653 -R "$GITHUB_REPOSITORY"
       - name: upload.release(${{ inputs.scheme }})
         if: inputs.storage == 'release'
         env:
-          GH_TOKEN=${{ github.token }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           find "$resScheme/(upqueue)" \
             -name "*.cejs-*.log.zst" -o \
